div class name change

--- a/Card/index.html
+++ b/Card/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
          <img src="./img/woman.jpg" alt="a woman smiling">
-       <div class="">
+       <div class="contact-info">
           <h2>Olivia Hartman</h2>
          <p>IT Manager</p>
          <h4>Stockholm, Sweden</h4>
